--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -45,18 +45,19 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:hint="@string/prompt_instance"
+                    android:maxLines="1"
                     android:selectAllOnFocus="true"
-                    android:singleLine="true"
                     android:text="@string/text_default_instance" />
             </android.support.design.widget.TextInputLayout>
 
             <Button
                 android:id="@+id/button_next"
-                style="?android:textAppearanceSmall"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/action_next"
+                android:textColor="@android:color/white"
                 android:textStyle="bold" />
 
         </LinearLayout>
